// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка: status === OK: если есть значение, вернет правильный результат 1`] = `
Object {
  "key": "Расчёт среднего времени продажи",
}
`;

exports[`карточка: status === undefined: вернет правильный результат 1`] = `
Object {
  "key": "Расчёт среднего времени продажи",
}
`;

exports[`отчет: status === ERROR: вернет флаг для удаления данных 1`] = `
Object {
  "field": "sell_time",
  "status": "REMOVE",
}
`;

exports[`отчет: status === OK: если есть значение, вернет правильный результат 1`] = `
Object {
  "key": "Среднее время продажи",
  "value": "12 дней",
}
`;

exports[`отчет: status === OK: если нет значения, вернет флаг для удаления данных 1`] = `
Object {
  "field": "sell_time",
  "status": "REMOVE",
}
`;

exports[`отчет: status === undefined: вернет правильный результат 1`] = `
Object {
  "key": "Среднее время продажи",
  "value": "",
}
`;
